testdata/baselines/reference/submodule/compiler/parseJsxElementInUnaryExpressionNoCrash2.errors.txt
a.js(2,1): error TS1109: Expression expected.


==== a.js (1 errors) ====
    ~<></> <
    
    
!!! error TS1109: Expression expected.